--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -84,3 +84,27 @@ a {
 .icon-suoding:before {
     content: "\e634";
 }
+
+::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: white;
+    opacity: .6
+}
+
+::-moz-placeholder {
+    /* Firefox 19+ */
+    color: white;
+    opacity: .6
+}
+
+:-ms-input-placeholder {
+    /* IE 10+ */
+    color: white;
+    opacity: .6
+}
+
+:-moz-placeholder {
+    /* Firefox 18- */
+    color: white;
+    opacity: .6
+}
